adds rental components,services,details and lists

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <bwm-header> </bwm-header>
 
-{{componentTitle}}
-<button (click)="clickHandler()">Click here!</button>
+<div class="container">
+    <router-outlet> </router-outlet>
+</div>
