adds proxy server,adds improvement to rental details

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,15 @@ html,body,p{
     color: $main-text-color;
 }
 
+.house{
+    color:#a72da3;
+}
+
+
+.condo{
+    color:#bf1818;
+}
+
+.apartment{
+    color: #d68000;
+}
