--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,3 @@
-$main-color:#F44336;
-$main-text-color:blue;
-$light-grey-color:#e9e9e9;
+$main-color: #F44336;
+$main-text-color: #484848;
+$light-gray-color: #e9e9e9;
