--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,9 +1,18 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" routerLink="/">BookWithMe!</a>
-    <form class="form-inline">
-        <input class="form-control mr-sm-2 bwm-search" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0 btn-bwm-search" type="submit">Search</button>
-    </form>
+    <div class="form-inline">
+        <input #searchRental
+               (keyup.enter)="search(searchRental.value)"
+               class="form-control mr-sm-2 bwm-search"
+               type="search"
+               placeholder="Search"
+               aria-label="Search">
+        <button (click)="search(searchRental.value)"
+                class="btn btn-outline-success my-2 my-sm-0 btn-bwm-search"
+                type="button">
+                Search
+        </button>
+    </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -21,8 +30,16 @@
             <li class="nav-item active">
                 <a class="nav-link">{{authService.getUsername()}} <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item active">
-              <a class="nav-link" (click)="logout()">Logout <span class="sr-only">(current)</span></a>
+            <div class="nav-item dropdown clickable">
+                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Owner Section
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" routerLink="/rentals/new">Create Rental</a>
+                </div>
+            </div>            
+            <li class="nav-item active clickable">
+              <a class="nav-link clickable" (click)="logout()">Logout <span class="sr-only">(current)</span></a>
             </li>
         </ng-container>
        
