--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -4,12 +4,10 @@
   padding: 20px;
   margin-bottom: 40px;
 
-
   .bwm-search {
     height: 50px;
     width: 300px;
   }
-
 
   .navbar-brand {
     margin-right: 30px;
@@ -19,16 +17,13 @@
     font-weight: 500;
   }
 
-
   .nav-item {
     font-size: 14px;
   }
 
-
   .btn-bwm-search {
     border-color: $main-color;
     color: $main-color;
-
 
     &:hover, &:focus, &:active {
       background-color: transparent;
@@ -37,4 +32,16 @@
       box-shadow: none;
     }
   }
+  .dropdown-item{
+    font-size: 14px;
+  
+    &:active,&:focus{
+      background-color: $main-color;
+  
+    }
+  }
+  .clickable{
+    cursor: pointer;
+  }
 }
+
