--- a/src/app/rental/rental-detail/rental-detail-booking/rental-detail-booking.component.html
+++ b/src/app/rental/rental-detail/rental-detail-booking/rental-detail-booking.component.html
@@ -1,6 +1,7 @@
 <div class="booking">
   <h3 class="booking-price">${{rental.dailyRate}} <span class="booking-per-night">per night</span></h3>
   <hr>
+  <ng-container *ngIf="auth.isAuthenticated()">
   <form #bookingForm="ngForm">
     <label>Dates</label>
     <input type="text" class="form-control daterangepicker-input" name="daterangeInput" daterangepicker
@@ -21,6 +22,11 @@
           [disabled]="!bookingForm.form.valid || !newBooking.startAt || !newBooking.endAt"
           class="btn btn-danger btn-confirm btn-block">Reserve place now</button>
   <hr>
+  </ng-container>
+
+  <div *ngIf="!auth.isAuthenticated()" class="should-login btn-confirm">
+    <a class="should-login" routerLink="/login">Login and Book this rental today</a>
+  </div>
   <p class="booking-note-title">People are interested into this house</p>
   <p class="booking-note-text">
     More than 500 people checked this rental in last month.
