--- a/src/app/rental/rental-detail/rental-detail-booking/rental-detail-booking.component.scss
+++ b/src/app/rental/rental-detail/rental-detail-booking/rental-detail-booking.component.scss
@@ -21,6 +21,20 @@
   padding: 20px;
   border: 1px solid $light-gray-color;
 
+  .should-login{
+    text-align: center;
+    margin-bottom: 10px;
+    color: white;
+
+    .btn-bwm{
+      padding:14px;
+
+      &:focus,&:hover{
+        color:white;
+      }
+    }
+  }
+
   .btn-confirm {
     background-color: #FF5A5F;
     font-size: 17px;
