--- a/src/app/rental/rental-list-item/rental-list-item.component.scss
+++ b/src/app/rental/rental-list-item/rental-list-item.component.scss
@@ -8,7 +8,7 @@ a{
 
 .bwm-card {
     border: none;
-
+    margin-bottom: 25px;
 
     .card-block {
       padding-top: 8px;
@@ -20,9 +20,6 @@ a{
         font-size: 12px;
         text-transform: uppercase;
       }
-
-
-
 
       .card-title {
         font-size: 19px;
