adds manage rental and booking endpoint and adds delete rental endpoint

--- a/src/app/rental/rental-create/rental-create.component.html
+++ b/src/app/rental/rental-create/rental-create.component.html
@@ -108,6 +108,7 @@
                 {{error.detail}}
               </p>
             </div>
+            <!-- error in length -->
           </form>
         </div>
         <div class="col-md-6 ml-auto">
