--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -51,11 +51,11 @@
              id="passwordConfirmation"
              required>
           </div>
-          <div *ngIf="errors.length > 0" class="alert alert-danger">
+          <!-- <div *ngIf="errors.length" class="alert alert-danger">
             <p *ngFor="let error of errors">
               {{error.detail}}
             </p>
-          </div>
+          </div> -->
           <button type="submit" [disabled]="!registerForm.form.valid"  (click)="register()" class="btn btn-bwm btn-danger">Submit</button>
         </form>
       </div>
