adds manage section for booking and rentals. adds delete rental functionality

--- a/src/app/rental/rental-detail/rental-detail-booking/rental-detail-booking.component.html
+++ b/src/app/rental/rental-detail/rental-detail-booking/rental-detail-booking.component.html
@@ -44,7 +44,7 @@
     <em> {{newBooking.days}}</em> nights / 
     <em>{{rental.dailyRate}}$</em> per night
     <p>Guests:<em>{{newBooking.guests}}</em></p>
-    <p>Price:<em>{{newBooking.TotalPrice}}$</em></p>
+    <p>Price:<em>{{newBooking.totalPrice}}$</em></p>
 
     <p>Do you want to confirm Booking?</p>
   </div>
