--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,20 @@ html,body,p{
 }
 
 
+.btn-bwm{
+  background-color: $main-color;
+  border-color: $main-color;
+  color:white;
+  padding:15px 30px;
+  font-size: 20px;
+
+  &:hover, &:focus, &:active{
+    border-color: $main-color !important;
+    background-color: $main-color !important;
+  }
+}
+
+
 .bwm-form {
     color: $main-text-color;
   
