--- a/src/app/manage/manage-rental/manage-rental.component.scss
+++ b/src/app/manage/manage-rental/manage-rental.component.scss
@@ -24,6 +24,12 @@
     font-size: 10px;
   }
 
+  .btn-edit{
+    font-size: 10px;
+    float: right;
+    margin-right: 10px;
+    padding:10px 15px;
+  }
   .btn-success, .btn-danger {
     font-size: 12px;
   }
