--- a/src/app/rental/rental-create/rental-create.component.html
+++ b/src/app/rental/rental-create/rental-create.component.html
@@ -47,13 +47,8 @@
             </div>
   
             <div class="form-group">
-              <label for="image">Image</label>
-              <input type="file"
-                     name="image"
-                     class="form-control"
-                     id="image"
-                     placeholder="Upload file..."
-                     (change)="handleImage()">
+              <!-- <label for="image">Image</label> -->
+              <bwm-image-upload (imageUploaded)="handleImage($event)"></bwm-image-upload>
             </div>
   
             <div class="form-group">
@@ -102,7 +97,7 @@
                      class="form-control"
                      id="shared">
             </div>
-            <button [disabled]="!RentalForm.form.valid" type="button" (click)="createRental()" class="btn btn-bwm btn-danger">Submit</button>
+            <button [disabled]="!RentalForm.form.valid || !rental.image" type="button" (click)="createRental()" class="btn btn-bwm btn-danger">Submit</button>
             <div *ngIf="errors.length > 0" class="alert alert-danger">
               <p *ngFor="let error of errors">
                 {{error.detail}}
