adds payment feature and profile page

--- a/src/app/rental/rental-detail/rental-detail-booking/rental-detail-booking.component.html
+++ b/src/app/rental/rental-detail/rental-detail-booking/rental-detail-booking.component.html
@@ -45,16 +45,17 @@
     <em>{{rental.dailyRate}}$</em> per night
     <p>Guests:<em>{{newBooking.guests}}</em></p>
     <p>Price:<em>{{newBooking.totalPrice}}$</em></p>
+    <bwm-payment (paymentConfirmed)="onPaymentConfirmed($event)"> </bwm-payment>
 
     <p>Do you want to confirm Booking?</p>
   </div>
-  <div *ngIf="errors.length>0" class="alert alert-danger modal-error">
+  <div *ngIf="errors && errors.length>0" class="alert alert-danger modal-error">
     <p *ngFor="let error of errors">
       {{error.detail}}
     </p>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-bwm" (click)="createBooking()">Confirm</button>
+    <button [disabled]="!newBooking.paymentToken" type="button" class="btn btn-bwm" (click)="createBooking()">Confirm</button>
     <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
   </div>
 </ng-template>
