--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -33,7 +33,7 @@
                    id="password"
                    formControlName="password">
           </div>
-          <div *ngIf="errors.length > 0" class="alert alert-danger">
+          <div *ngIf="errors && errors.length > 0" class="alert alert-danger">
             <p *ngFor="let error of errors">
               {{error.detail}}
             </p>
