--- a/src/app/manage/manage-booking/manage-booking.component.html
+++ b/src/app/manage/manage-booking/manage-booking.component.html
@@ -24,7 +24,41 @@
     </ng-container>
     <div class="alert alert-warning" *ngIf="bookings && bookings.length==0">
       You have no bookings created go to rentals section and book your place today.
-      <a class="btn btn-bwm" routerLink="/rentals/{{booking.rental._id}}">Available Rentals</a>
+      <a class="btn btn-bwm" routerLink="/rentals">Available Rentals</a>
+    </div>
+  </div>
+
+  <h1 class="page-title">My Pending Bookings</h1>
+  <div class="row">
+     <ng-container *ngIf="payments && payments.length>0"> 
+      <div *ngFor="let payment of payments" class="col-md-4"> 
+        <div class="card text-center">
+          <div class="card-header">
+            Booking made by {{payment.fromUser.username}} 
+          </div>
+          <div class="card-block">
+            <ng-container *ngIf="payment.booking.rental">
+              <h4 class="card-title">{{payment.booking.rental.title}} - {{payment.booking.rental.city}} </h4> 
+              <p class="card-text booking-desc">{{payment.booking.rental.description}}</p> 
+            </ng-container>            
+            <p class="card-text booking-days"> {{payment.booking.startAt|formatDate}} - {{payment.booking.endAt|formatDate}} | {{payment.booking.days}} days</p>
+            <p class="card-text"><span>Price: </span> <span class="booking-price-value">{{payment.booking.totalPrice}} $</span></p>
+            <p class="card-text"><span>Status: </span> <span class="booking-price-value">{{payment.status}}</span></p>
+            
+            <a *ngIf="payment.booking.rental" class="btn btn-bwm" routerLink="/rentals/{{payment.booking.rental._id}}">Go to Rental</a>
+          </div>
+          <div class="card-footer text-muted">
+            {{payment.booking.createdAt|formatDate}}
+            <div *ngIf="payment.status==='pending'">
+              <button class="btn btn-success" (click)="acceptPayment(payment)">Confirm</button>
+              <button class="btn btn-danger" (click)="declinePayment(payment)">Decline</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </ng-container>
+    <div class="alert alert-warning" *ngIf="payments && payments.length==0">
+      You have no pending bookings
     </div>
   </div>
 </section>
