--- a/src/app/rental/rental-update/rental-update.component.html
+++ b/src/app/rental/rental-update/rental-update.component.html
@@ -2,7 +2,12 @@
   <div class="upper-section">
     <div class="row">
       <div class="col-md-6">
-        <img src="{{rental.image}}" alt="">
+        <bwm-editable-image
+           [(entity)]="rental"
+           [field]="'image'"
+           (updatedEntity)="updateRental(rental._id,$event)">
+          </bwm-editable-image>
+
       </div>
       <div class="col-md-6">
         <bwm-map [updatedLocation]="updatedLocation"
