--- a/src/app/manage/manage-rental/manage-rental.component.scss
+++ b/src/app/manage/manage-rental/manage-rental.component.scss
@@ -15,7 +15,7 @@
 
   .btn-bwm {
     font-size: 12px;
-    color: red;
+    color: white;
     padding: 10px 15px;
   }
 
@@ -24,12 +24,14 @@
     font-size: 10px;
   }
 
-  .btn-edit{
+  .btn-edit {
     font-size: 10px;
+    color: white;
+    padding: 10px 15px;
     float: right;
     margin-right: 10px;
-    padding:10px 15px;
   }
+
   .btn-success, .btn-danger {
     font-size: 12px;
   }
